--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,11 @@ discord.py==2.1.0
 frozenlist==1.3.3
 h11==0.14.0
 idna==3.4
+losuapi==0.0.1
 multidict==6.0.4
 oauthlib==3.2.2
 osrparse==6.0.2
+ossapi==3.0.0
 pydantic==1.10.4
 python-dotenv==0.21.1
 requests==2.28.2
