--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
-aiohttp==3.8.3
+aiohttp==3.8.4
 aiosignal==1.3.1
 anyio==3.6.2
 async-timeout==4.0.2
 attrs==22.2.0
 certifi==2022.12.7
-charset-normalizer==2.1.1
-discord==2.1.0
-discord.py==2.1.1
+charset-normalizer==3.0.1
 frozenlist==1.3.3
 h11==0.14.0
 httpcore==0.16.3
@@ -14,9 +12,10 @@ httpx==0.23.3
 idna==3.4
 losuapi==0.1.3
 multidict==6.0.4
-pydantic==1.10.4
+py-cord==2.4.0
+pydantic==1.10.5
 python-dotenv==0.21.1
 rfc3986==1.5.0
 sniffio==1.3.0
-typing_extensions==4.4.0
+typing_extensions==4.5.0
 yarl==1.8.2
